fix(content): white-space prewrap when isExpanded

--- a/src/components/Space/Review/Item/answer.module.scss
+++ b/src/components/Space/Review/Item/answer.module.scss
@@ -27,6 +27,7 @@
     @include m.fontBody1Regular;
     position: relative;
     color: var(--c-gray-900);
+    white-space: pre-wrap;
 
     &:not(.isClickedViewMore) {
       @include m.makeEllipsis(3);
