--- a/src/components/Space/Review/Item/content.module.scss
+++ b/src/components/Space/Review/Item/content.module.scss
@@ -7,6 +7,7 @@
   width: 100%;
   padding: 0 c.$S_PAGE_HORIZONTAL_PADDING;
   color: var(--c-gray-900);
+  white-space: pre-wrap;
 
   &:not(.isClickedViewMore) {
     @include m.makeEllipsis(3);
